@@ -1,3 +1,8 @@
+2008-09-08  Mark van Rossum  <mvanross@inf.ed.ac.uk>
+
+	* statistics/distributions/binornd.m: Handle zero values of n
+	correctly.
+
 2008-09-08  Kai Habel  <kai.habel@gmx.de>
 
         * plot/contourf.m: Fix case for equal-sized matrices
